# tgpdemo

./: CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
etc/: execvars.json  filevars.json  filevars.tmpl  lighttpd.conf  manifest.json  motd.tmpl  procmon.json  vars.json
